--- a/ref.bib
+++ b/ref.bib
@@ -37,3 +37,66 @@
     chapter = "1.2",
     keywords  = "knuth,programming"
 }
+
+@online{ble-info,
+    author = "Bluetooth SIG",
+    title = "Bluetooth Technology Overview",
+    url  = "https://www.bluetooth.com/learn-about-bluetooth/tech-overview/",
+    addendum = "(accessed: 02.21.2023)"
+}
+
+@online{cryt-lib,
+    author = "Nordic Semiconductor",
+    title = "Cryptography library - nrf_crypto",
+    url  = "https://infocenter.nordicsemi.com/index.jsp?topic=\%2Fcom.nordic.infocenter.sdk5.v15.0.0\%2Flib_crypto.html&cp=5_4_1_3_11",
+    addendum = "(accessed: 02.19.2023)"
+}
+
+@inproceedings{user-percept,
+author = {Ur, Blase and Bees, Jonathan and Segreti, Sean M. and Bauer, Lujo and Christin, Nicolas and Cranor, Lorrie Faith},
+title = {Do Users' Perceptions of Password Security Match Reality?},
+year = {2016},
+isbn = {9781450333627},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2858036.2858546},
+doi = {10.1145/2858036.2858546},
+booktitle = {Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems},
+pages = {3748–3760},
+numpages = {13},
+keywords = {authentication, users' folk models, user behavior, perceptions of security, usable security, passwords},
+location = {San Jose, California, USA},
+series = {CHI '16}
+}
+
+@inproceedings{passw-strats,
+author = {Gaw, Shirley and Felten, Edward W.},
+title = {Password Management Strategies for Online Accounts},
+year = {2006},
+isbn = {1595934480},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1143120.1143127},
+doi = {10.1145/1143120.1143127},
+booktitle = {Proceedings of the Second Symposium on Usable Privacy and Security},
+pages = {44–55},
+numpages = {12},
+keywords = {password reuse, password management, survey, security, password, user behavior},
+location = {Pittsburgh, Pennsylvania, USA},
+series = {SOUPS '06}
+}
+
+@online{nd-breaches,
+    author = "Bank of North Dakota",
+    title = "81\% of Company Data Breaches Due To Poor Passwords",
+    url  = "https://bnd.nd.gov/81-of-company-data-breaches-due-to-poor-passwords/",
+    addendum = "(accessed: 02.21.2023)"
+}
+
+@online{equi-breach,
+    author = "Federal Trade Commission",
+    title = "Equifax Data Breach Settlement",
+    url  = "https://www.ftc.gov/enforcement/refunds/equifax-data-breach-settlement",
+    addendum = "(accessed: 02.21.2023)"
+}
+
